--- a/src/Splash/Splash.css
+++ b/src/Splash/Splash.css
@@ -1,6 +1,4 @@
-.content {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+.content {}
 
 body {
     /* background-color: blue;
