completed basic login functionality

--- a/src/Home/TaskEntryBar/TaskEntryBar.css
+++ b/src/Home/TaskEntryBar/TaskEntryBar.css
@@ -15,7 +15,7 @@
 }
 
 .material-icons {
-    padding-top: 18px;
+    /* padding-top: 18px; */
     cursor: pointer;
     text-decoration: none;
     color: lightslategrey;
