--- a/src/Home/TaskEntryBar/TaskEntryBar.css
+++ b/src/Home/TaskEntryBar/TaskEntryBar.css
@@ -1,161 +1,171 @@
-.center-text {
-    text-align: center;
-}
-
-#folder {
-    margin-left: 12px;
-    margin-top: 8px;
-    cursor: pointer;
-}
-
-.bottom-toolbar {
-    /* visibility: hidden; */
-    margin-right: 14px;
-    opacity: 0.7;
-}
-
-.material-icons {
-    /* padding-top: 18px; */
-    cursor: pointer;
-    text-decoration: none;
-    color: lightslategrey;
-    /* font-size: 30px !important; */
-    /* font-size: 60px !important; */
-    /* raises anchor tag above everything else in div */
-    opacity: 0.5;
-    /*workaround to make clickable in IE */
-    /*workaround to make clickable in IE */
-    filter: alpha(opacity=0);
-    /*workaround to make clickable in IE */
-}
-
-.MuiSvgIcon-root {
-    margin-top: 6px;
-    font-size: 1.9rem !important;
-}
-
-.taskInput {
-    border: 0;
-    outline: 0;
-    background: transparent;
-    border-bottom: 1px solid black;
-    width: 200px;
-    font-size: 24px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    float: left;
-    /* margin-top: -6px; */
-}
-
-.taskbar {
-    /* display: grid;
-    width: 100%;
-    table-layout: fixed;
-    border-spacing: 10px; */
-    display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 540px;
-}
-
-.floatLeft {
-    float: left;
-}
-
-.add-project-modal {
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4);
-}
-
-.add-project-modal-main {
-    position: relative;
-    background: rgb(253, 253, 253);
-    border-style: solid;
-    border-radius: 20px;
-    width: 400px;
-    height: auto;
-    top: 49%;
-    left: 55%;
-    transform: translate(-50%, -50%);
-}
-
-.save-project-button,
-.create-project-header,
-.create-project-input {
-    margin-top: 24px;
-    text-align: center;
-    display: inline;
-    margin-left: 10px;
-}
-
-.save-project-button {
-    padding: 10px;
-    background-color: lightslategray;
-    margin-bottom: 6px;
-}
-
-.create-project-input {
-    width: 200px;
-    margin-left: 8px;
-    padding-top: 6px;
-}
-
-.modal {
-    position: fixed;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 9999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.modal-main {
-    position: relative;
-    background: rgb(253, 253, 253);
-    border-style: solid;
-    border-radius: 20px;
-    width: 400px;
-    height: auto;
-    top: 50%;
-    left: 55%;
-    transform: translate(-50%, -50%);
-}
-
-.modal-content {
-    margin-left: 20px;
-    margin-top: 8px;
-}
-
-.modal-close-button {
-    font-size: 20px;
-    background-color: transparent;
-    width: 10px;
-    height: 10px;
-    border-radius: 0px;
-    float: right;
-    color: darkgray;
-    padding: 2px;
-    margin-right: 10px;
-    cursor: pointer;
-}
-
-.add-project-button {
-    padding: 10px;
-    background-color: lightslategray;
-    margin-bottom: 6px;
-    margin-left: 8px;
-}
-
-.display-block {
-    display: block;
-}
-
-.display-none {
-    display: none;
-}
+        .center-text {
+            text-align: center;
+        }
+        
+        #folder {
+            margin-left: 12px;
+            margin-top: 8px;
+            cursor: pointer;
+        }
+        
+        .bottom-toolbar {
+            /* visibility: hidden; */
+            margin-right: 14px;
+            opacity: 0.7;
+        }
+        
+        .material-icons {
+            /* padding-top: 18px; */
+            cursor: pointer;
+            text-decoration: none;
+            color: lightslategrey;
+            /* font-size: 30px !important; */
+            /* font-size: 60px !important; */
+            /* raises anchor tag above everything else in div */
+            opacity: 0.5;
+            /*workaround to make clickable in IE */
+            /*workaround to make clickable in IE */
+            filter: alpha(opacity=0);
+            /*workaround to make clickable in IE */
+        }
+        
+        .MuiSvgIcon-root {
+            margin-top: 6px;
+            font-size: 1.9rem !important;
+        }
+        
+        .taskInput {
+            border: 0;
+            outline: 0;
+            background: transparent;
+            border-bottom: 1px solid black;
+            width: 200px;
+            font-size: 24px;
+            font-family: 'Open Sans Condensed', sans-serif;
+            float: left;
+            /* margin-top: -6px; */
+        }
+        
+        @media screen and (min-width: 768px) {
+            .taskbar {
+                width: 560px;
+            }
+        }
+        
+        .taskbar {
+            display: block;
+            position: relative;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
+        .floatLeft {
+            float: left;
+        }
+        
+        .add-project-modal {
+            position: fixed;
+            z-index: 9999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.4);
+        }
+        
+        .add-project-modal-main {
+            position: relative;
+            background: rgb(253, 253, 253);
+            border-style: solid;
+            border-radius: 20px;
+            width: 400px;
+            height: auto;
+            top: 49%;
+            left: 55%;
+            transform: translate(-50%, -50%);
+        }
+        
+        .save-project-button,
+        .create-project-header,
+        .create-project-input {
+            margin-top: 24px;
+            text-align: center;
+            display: inline;
+            margin-left: 10px;
+        }
+        
+        .save-project-button {
+            padding: 10px;
+            background-color: lightslategray;
+            margin-bottom: 6px;
+        }
+        
+        .create-project-input {
+            width: 200px;
+            margin-left: 8px;
+            padding-top: 6px;
+        }
+        
+        .modal {
+            position: fixed;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: 9999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        
+        .modal-main {
+            position: relative;
+            background: rgb(253, 253, 253);
+            border-style: solid;
+            border-radius: 20px;
+            width: 400px;
+            height: auto;
+            top: 50%;
+            left: 55%;
+            transform: translate(-50%, -50%);
+        }
+        
+        .modal-content {
+            margin-left: 20px;
+            margin-top: 8px;
+        }
+        
+        .modal-close-button {
+            font-size: 20px;
+            background-color: transparent;
+            /* width: 10px;
+            height: 10px; */
+            border-radius: 0px;
+            float: right;
+            color: darkgray;
+            /* padding: 2px; */
+            /* margin-right: 10px; */
+            cursor: pointer;
+            border: none;
+        }
+        
+        .add-project-button {
+            padding: 10px;
+            background-color: lightslategray;
+            margin-bottom: 6px;
+            margin-left: 8px;
+        }
+        
+        .display-block {
+            display: block;
+        }
+        
+        .display-none {
+            display: none;
+        }
+        
+        @media screen and (max-width: 768px) {
+            .modal-main,
+            .add-project-modal-main {
+                top: 50%;
+                left: 50%;
+            }
+        }
