--- a/src/Home/TimerHome.css
+++ b/src/Home/TimerHome.css
@@ -26,7 +26,7 @@
     width: 200px;
     height: auto;
     top: 50%;
-    left: 88%;
+    left: 87%;
     transform: translate(-50%, -50%);
 }
 
@@ -57,4 +57,17 @@
     padding: 10px;
     background-color: lightslategray;
     margin-bottom: 6px;
+}
+
+@media screen and (max-width: 768px) {
+    .modal-break-main {
+        top: 50%;
+        left: 50%;
+    }
+    .spiral-title {
+        clear: right;
+    }
+    .spiral-headline {
+        clear: right;
+    }
 }
