--- a/src/Splash/Splash.css
+++ b/src/Splash/Splash.css
@@ -18,15 +18,6 @@
     padding: 5px;
 }
 
-body {
-    /* background-color: blue;
-    color: black; */
-}
-
-button {
-    display: show;
-}
-
 .card-title {
     font-size: 22px;
     font-weight: bold;
@@ -117,12 +108,13 @@ button {
     height: auto;
 }
 
-button {
+.splash-button {
     background-color: #5f4dee;
     border-radius: 2rem;
     border: none;
     padding: 20px;
     color: white;
+    display: show;
 }
 
 .first-block {
@@ -152,3 +144,46 @@ ul {
 }
 
 .image-container {}
+
+@media screen and (max-width: 768px) {
+    .bullet {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .col {
+        width: unset;
+    }
+    .two-column-split {
+        display: unset;
+    }
+    .image-container {
+        position: relative;
+        margin: auto;
+    }
+    .galexy-image {
+        display: none;
+    }
+    h2,
+    .centered-text,
+    p,
+    h4 {
+        text-align: left;
+        margin-left: 8px;
+    }
+    .fails-for {
+        margin-top: 60px;
+    }
+    .fails-for,
+    .p-heading {
+        margin-left: 0px;
+    }
+    .heading {
+        margin-left: 8px;
+    }
+    .third-section {
+        padding-top: 20px;
+    }
+    .splash-button {
+        margin-bottom: 40px;
+    }
+}
