--- a/src/Tracking/Tracking.css
+++ b/src/Tracking/Tracking.css
@@ -5,3 +5,9 @@
 .dropdown {
     width: 200px;
 }
+
+@media screen and (max-width: 768px) {
+    .Dropdown-control {
+        margin-top: 0px !important;
+    }
+}
