--- a/src/App/App.css
+++ b/src/App/App.css
@@ -18,6 +18,16 @@ center {
 }
 
 
+/* .example-workflow {
+    float: left;
+    padding-top: 10px;
+    font-size: 20px;
+    padding-left: 15px;
+    position: absolute;
+    color: darkgray
+} */
+
+
 /* Class */
 
 .navBar {
