--- a/src/Home/TimerHome.css
+++ b/src/Home/TimerHome.css
@@ -3,6 +3,12 @@
     cursor: pointer;
 }
 
+#root {
+    /* background-image: url('../Img/hex-background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; */
+}
+
 .edit-break {
     width: 20px;
     margin-right: 3px;
@@ -30,6 +36,40 @@
     transform: translate(-50%, -50%);
 }
 
+.workflow-modal {
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.4);
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.workflow-list {
+    padding-top: 10px;
+    font-size: 16px;
+    padding-left: 8px;
+    /* list-style: none; */
+}
+
+.workflow-item {
+    padding-bottom: 16px;
+}
+
+.modal-workflow-main {
+    position: relative;
+    background: rgb(253, 253, 253);
+    border-style: solid;
+    border-radius: 20px;
+    width: 340px;
+    height: 90%;
+    overflow: auto;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+
 .pref-li {
     font-size: 18px;
     padding-left: 0px;
@@ -38,6 +78,18 @@
 
 .prefs-label {
     margin-bottom: 4px;
+}
+
+.skip-img {
+    width: 22px;
+    height: 22px;
+}
+
+.folder-img {
+    margin-bottom: -2px;
+    width: 18px;
+    height: 18px;
+    padding-left: 4px;
 }
 
 
