--- a/src/Home/MainRectangle/MainRectangle.css
+++ b/src/Home/MainRectangle/MainRectangle.css
@@ -1,4 +1,5 @@
 .container {
+    /* pointer-events: none; */
     display: grid;
     grid-gap: 0px;
     grid-template-rows: 8fr 1fr 1fr 3fr;
@@ -11,9 +12,11 @@
     bottom: 0;
     left: 0;
     right: 0;
+    clear: left;
     margin: auto;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     margin-bottom: 60px;
+    background-color: aliceblue;
     /* sets a potential background image */
     /* background-image: url('../../Img/grspiral.jpeg');
     background-size: 700px 400px;
@@ -39,6 +42,8 @@
 }
 
 .item {
+    z-index: 1;
+    /* pointer-events: none; */
     position: relative;
     color: #000;
     display: flex;
@@ -46,7 +51,8 @@
     align-items: center;
     font-size: 24px;
     border: 1px solid rgb(139, 139, 139);
-    background-color: transparent;
+    background-color: aliceblue;
+    /* pointer-events: none; */
     /* background-image: url('./copper.jpeg');
     background-repeat: no-repeat;
     background-size: contain; */
@@ -60,6 +66,8 @@
 }
 
 .clickable {
+    z-index: 2;
+    /* pointer-events: auto; */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -73,7 +81,7 @@
     justify-content: center;
     align-items: center;
     font-size: 24px;
-    background-color: aliceblue;
+    background-color: transparent;
     border: 1px;
     cursor: pointer;
     font-family: inherit;
