--- a/src/Home/TaskEntryBar/Clock/Clock.css
+++ b/src/Home/TaskEntryBar/Clock/Clock.css
@@ -4,7 +4,64 @@
 
 #timer {
     font-size: 28px;
-    margin-right: 12px;
+    font-weight: bolder;
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 0px;
+    margin-left: 0px;
+}
+
+.toolbar-container {
+    z-index: 3;
+    pointer-events: none;
+    width: 700px;
+    max-width: 100%;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    clear: left;
+    margin: auto;
+}
+
+.toolbar-icons {
+    pointer-events: auto !important;
+    position: absolute;
+    top: 397px;
+    background-color: rgb(218, 226, 233);
+    border-radius: 3px;
+    border-color: rgb(175, 175, 175);
+    pointer-events: inherit;
+    /* border: 1px solid black; */
+    /* box-shadow: 2px 1px 0px 0px #616161;
+    -webkit-box-shadow: 2px 1px 0px 0px #616161; */
+    /* -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 3px;
+    border: 1px solid #000;
+    color: black;
+    text-decoration: none; */
+    padding: 1px 6px;
+    border-width: 2px;
+    border-style: outset;
+}
+
+.toolbar-icon {
+    /* position: relative;
+    bottom: 40px; */
+    height: 36px !important;
+    width: 36px !important;
+    padding: 6px 12px 6px 12px;
+    margin: 0px !important;
+    color: black;
+}
+
+.toolbar-icon:hover {
+    height: 38px !important;
+    width: 38px !important;
+    padding: 5px 11px 5px 11px;
 }
 
 .stop,
@@ -19,9 +76,9 @@
 }
 
 @media screen and (min-width: 768px) {
-    #timer {
+    /* #timer {
         float: left;
-    }
+    } */
     .taskInput {
         float: left;
     }
