--- a/src/Home/TaskEntryBar/Clock/Clock.css
+++ b/src/Home/TaskEntryBar/Clock/Clock.css
@@ -28,9 +28,11 @@
 .toolbar-icons {
     pointer-events: auto !important;
     position: absolute;
-    top: 397px;
-    background-color: rgb(218, 226, 233);
-    border-radius: 3px;
+    top: 407px;
+    /* background-image: url('../../../Img/blackgrad2.png'); */
+    /* background-size: contain; */
+    background-color: rgb(207, 214, 221);
+    border-radius: 10px;
     border-color: rgb(175, 175, 175);
     pointer-events: inherit;
     /* border: 1px solid black; */
@@ -49,11 +51,13 @@
 }
 
 .toolbar-icon {
+    position: relative;
+    top: 3px;
     /* position: relative;
     bottom: 40px; */
     height: 36px !important;
     width: 36px !important;
-    padding: 6px 12px 6px 12px;
+    padding: 1px 12px 1px 12px;
     margin: 0px !important;
     color: black;
 }
@@ -61,7 +65,7 @@
 .toolbar-icon:hover {
     height: 38px !important;
     width: 38px !important;
-    padding: 5px 11px 5px 11px;
+    padding: 0px 11px 0px 11px;
 }
 
 .stop,
