--- a/src/Home/TaskEntryBar/TaskEntryBar.css
+++ b/src/Home/TaskEntryBar/TaskEntryBar.css
@@ -6,13 +6,15 @@
             float: right;
             /* margin-top: 22px; */
             position: relative;
-            top: 23px;
+            top: 18px;
             cursor: pointer;
-            width: 160px;
-            height: 30px;
+            width: 180px;
+            height: 35px;
+            font-size: 20px;
             margin-left: 20px;
             margin-top: 0px;
             margin-bottom: 0px;
+            overflow: hidden
             /* background-color: whitesmoke; */
         }
         
@@ -77,15 +79,13 @@
             margin-bottom: 0px;
             margin-left: 0%;
             cursor: pointer;
-            margin-right: 40px;
+            margin-right: 20px;
             outline-color: black;
         }
         
         .plus-button:hover {
             background-color: lightgray;
         }
-        
-        .toggle-taskbar {}
         
         .taskbar {
             /* display: block;
@@ -94,13 +94,6 @@
             margin-right: auto;
             width: 700px;
         }
-        
-        @media screen and (min-width: 768px) {
-            .taskbar {}
-        }
-        /* .floatLeft {
-            float: left;
-        } */
         
         .add-project-modal {
             position: fixed;
@@ -119,8 +112,8 @@
             border-radius: 20px;
             width: 400px;
             height: auto;
-            top: 49%;
-            left: 55%;
+            top: 50%;
+            left: 50%;
             transform: translate(-50%, -50%);
         }
         
@@ -135,8 +128,9 @@
         
         .save-project-button {
             padding: 10px;
-            background-color: lightslategray;
+            background-color: lightgray;
             margin-bottom: 6px;
+            border-radius: 10px;
         }
         
         .create-project-input {
@@ -163,7 +157,7 @@
             width: 400px;
             height: auto;
             top: 50%;
-            left: 55%;
+            left: 50%;
             transform: translate(-50%, -50%);
         }
         
@@ -188,9 +182,10 @@
         
         .add-project-button {
             padding: 10px;
-            background-color: lightslategray;
+            background-color: lightgray;
             margin-bottom: 6px;
             margin-left: 8px;
+            border-radius: 10px;
         }
         
         .display-block {
