--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     font-family: 'Open Sans', sans-serif;
+    /* background-image: url(''); */
 }
 
 h1 {
