--- a/src/Home/MainRectangle/MainRectangle.css
+++ b/src/Home/MainRectangle/MainRectangle.css
@@ -123,7 +123,10 @@
         padding-bottom: 14px;
         padding-left: 0px;
         padding-top: 18px;
-        float: left
+        float: left;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
     }
     .box2 {
         padding: 22px;
@@ -132,5 +135,8 @@
         font-size: 16px;
         margin-left: 0px;
         float: left;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
     }
 }
