--- a/src/Home/TaskEntryBar/TaskEntryBar.css
+++ b/src/Home/TaskEntryBar/TaskEntryBar.css
@@ -71,6 +71,9 @@
         cursor: pointer;
         margin-right: 20px;
         outline-color: black;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
     }
     
     .plus-button:hover {
