--- a/src/Home/TaskEntryBar/TaskEntryBar.css
+++ b/src/Home/TaskEntryBar/TaskEntryBar.css
@@ -222,6 +222,7 @@
             width: 300px;
         } */
         #folder {
+            font-size: 18px;
             float: left;
             margin-bottom: 22px;
             margin-left: 0px;
