--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -98,6 +98,7 @@ a {
 /* The button used to open the sidebar */
 
 .openbtn {
+    z-index: 900;
     font-size: 20px;
     cursor: pointer;
     background-color: transparent;
