--- a/src/Tracking/Grid/Grid.css
+++ b/src/Tracking/Grid/Grid.css
@@ -9,8 +9,24 @@
 
 .ag-theme-balham {
     display: inline-block;
+    padding-top: 20px;
 }
 
 .ag-header-cell {
     width: 250px;
+}
+
+.ag-header,
+.ag-header-row,
+.ag-header-cell-label,
+.ag-cell,
+.ag-root {
+    background-color: rgb(0, 0, 0);
+    color: rgb(180, 180, 180);
+    border-color: rgb(0, 0, 0);
+}
+
+.grid-container {
+    padding-left: 20px;
+    padding-right: 20px;
 }
