--- a/src/Tracking/Tracking.css
+++ b/src/Tracking/Tracking.css
@@ -2,11 +2,91 @@
     background-color: black;
 }
 
+.delete-project {
+    padding-right: 10px;
+    margin: 0px;
+    color: red;
+    background: black;
+    text-align: center;
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.edit-label {
+    color: white;
+    margin-left: 40px;
+    display: inline
+}
+
+.canvasjs-chart-container {
+    padding-top: 40px;
+    clear: both;
+}
+
+.canvasjs-chart-toolbar,
+.canvasjs-chart-credit {
+    display: none;
+}
+
+.bar-chart-header {
+    font-size: 30px;
+    margin-top: 0px;
+    padding-left: 50px;
+    color: white;
+}
+
+.bar-chart-sub-header {
+    margin-top: 0px;
+    padding-left: 10px;
+    padding-top: 16px;
+    float: left;
+    color: rgb(177, 177, 177);
+}
+
 .dropdown {
     width: 100%;
 }
 
-.projects-dropdown>.Dropdown-root>.Dropdown-control>.Dropdown-placeholder>.Dropdown-arrow {
+.bar-chart-sub-header {
+    padding-bottom: 20px;
+}
+
+.timeframe {
+    cursor: pointer;
+    background-color: black;
+    color: rgb(185, 185, 185);
+    font-size: 22px;
+    margin-top: 10px;
+    margin-left: 50px;
+    padding: 6px;
+    border-radius: 5px;
+    float: left;
+}
+
+#canvasjs-react-chart-container-0 {
+    position: static !important;
+}
+
+.Dropdown-control:hover {
+    background-color: rgb(41, 41, 41);
+}
+
+.Dropdown-arrow {
+    display: none;
+}
+
+.timeframe select {
+    /* for Firefox */
+    -moz-appearance: none !important;
+    /* for Safari, Chrome, Opera */
+    -webkit-appearance: none !important;
+}
+
+
+/* for IE10 */
+
+.timeframe select::-ms-expand {
     display: none;
 }
 
@@ -15,6 +95,9 @@
 }
 
 .projects-dropdown>.Dropdown-root>.Dropdown-control {
+    font-family: inherit;
+    border-width: 2px;
+    border-style: outset;
     margin-top: 20px;
     padding: 14px 0px 0px 0px;
     text-align: center;
@@ -45,7 +128,7 @@
 }
 
 .tracking-header {
-    margin-top: 0px;
+    padding-top: 180px;
 }
 
 .tracking-subheader {}
@@ -53,8 +136,5 @@
 @media screen and (max-width: 768px) {
     .Dropdown-control {
         margin-top: 0px !important;
-    }
-    .tracking-header {
-        padding-top: 60px;
     }
 }
