--- a/src/Home/TaskEntryBar/TaskEntryBar.css
+++ b/src/Home/TaskEntryBar/TaskEntryBar.css
@@ -26,6 +26,10 @@
         color: white;
     }
     
+    #folder:hover {
+        background-color: #447b9c;
+    }
+    
     .bottom-toolbar {
         margin-right: 14px;
         opacity: 0.7;
@@ -227,6 +231,9 @@
             margin-bottom: 22px;
             margin-left: 0px;
             width: 180px;
+        }
+        #folder:hover {
+            background-color: ##447b9c;
         }
         .taskInput {
             float: none;
