--- a/src/Splash/Splash.css
+++ b/src/Splash/Splash.css
@@ -116,12 +116,17 @@
 }
 
 .splash-button {
-    background-color: #2B3E7C;
+    background-color: #546bb8;
     border-radius: 2rem;
     border: none;
     padding: 20px;
     color: white;
     display: show;
+    cursor: pointer;
+}
+
+.splash-button:hover {
+    background-color: #667dc8;
 }
 
 .first-block {
