--- a/src/Tracking/Tracking.css
+++ b/src/Tracking/Tracking.css
@@ -20,8 +20,12 @@
 }
 
 .canvasjs-chart-container {
-    padding-top: 40px;
     clear: both;
+}
+
+#canvasjs-react-chart-container-1,
+#canvasjs-react-chart-container-2 {
+    margin-top: 100px;
 }
 
 .canvasjs-chart-toolbar,
