--- a/src/Home/TimerHome.css
+++ b/src/Home/TimerHome.css
@@ -12,12 +12,22 @@
 
 .project-list-name {
     display: inline;
-    text-decoration: underline;
     cursor: pointer;
 }
 
+.current-project-selected-name {
+    padding-left: 10px;
+}
+
 .project-list-item {
-    padding-bottom: 14px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 10px !important;
+}
+
+.project-list-item:hover {
+    background-color: lightblue;
+    cursor: pointer;
 }
 
 .break-clickable {
@@ -54,6 +64,41 @@
     transform: translate(-50%, -50%);
 }
 
+.nav-link-modal {
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.4);
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.nav-link-list {
+    padding-top: 10px;
+    font-size: 16px;
+    padding-left: 8px;
+}
+
+.nav-link-item {
+    padding-bottom: 16px;
+}
+
+.modal-nav-link-main {
+    white-space: initial;
+    padding: 40px;
+    position: relative;
+    background: rgb(253, 253, 253);
+    border-style: solid;
+    border-radius: 15px;
+    width: 40%;
+    height: 40%;
+    overflow: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .workflow-modal {
     position: fixed;
     background-color: rgb(0, 0, 0, 0.4);
@@ -75,12 +120,13 @@
 }
 
 .modal-workflow-main {
+    padding: 40px;
     position: relative;
     background: rgb(253, 253, 253);
     border-style: solid;
-    border-radius: 8px;
-    width: 80%;
-    height: 80%;
+    border-radius: 20px;
+    width: 60%;
+    height: 70%;
     overflow: auto;
     top: 50%;
     left: 50%;
@@ -125,8 +171,11 @@
 
 .save-break-prefs-button {
     padding: 10px;
-    background-color: lightslategray;
+    background-color: lightgray;
     margin-bottom: 6px;
+    margin-left: 8px;
+    border-radius: 10px;
+    color: black;
 }
 
 .link-tracking {
@@ -165,6 +214,10 @@
 }
 
 @media screen and (max-width: 768px) {
+    .modal-nav-link-main {
+        width: 70%;
+        height: 40%;
+    }
     .modal-break-main {
         top: 50%;
         left: 50%;
