--- a/src/App/App.css
+++ b/src/App/App.css
@@ -49,6 +49,10 @@ center {
     font-size: 20px;
 }
 
+.clip-loader {
+    z-index: 100000
+}
+
 @media screen and (min-width: 768px) {
     .nav-button {
         display: none;
