--- a/src/Main/GoldenRectangle/GoldenRectangle.css
+++ b/src/Main/GoldenRectangle/GoldenRectangle.css
@@ -19,6 +19,20 @@
     background-repeat: no-repeat;
 }
 
+.break-message {
+    cursor: pointer;
+    margin-top: -41px;
+    margin-bottom: 0px;
+    color: white;
+    border: solid 1px white;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 150px;
+    border-radius: 15px;
+}
+
 .alarm {
     position: absolute;
     z-index: 900;
