--- a/src/Main/GoldenRectangle/GoldenRectangle.css
+++ b/src/Main/GoldenRectangle/GoldenRectangle.css
@@ -20,17 +20,20 @@
 }
 
 .break-message {
+    position: relative;
+    top: -50px;
+    margin-bottom: -50px;
     cursor: pointer;
-    margin-top: -41px;
-    margin-bottom: 0px;
+    pointer-events: all;
     color: white;
-    border: solid 1px white;
-    padding: 10px;
+    border: solid 1px rgba(255, 255, 255, 0.404);
+    background-color: rgba(240, 248, 255, 0.13);
+    padding: 14px 20px 15px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: 150px;
     border-radius: 15px;
+    width: 150px;
 }
 
 .alarm {
