--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -143,7 +143,7 @@ a {
 
 .panel {
     padding: 0 18px;
-    display: none;
+    display: initial;
     overflow: hidden;
 }
 
@@ -180,6 +180,13 @@ a {
 
 .white {
     color: white;
+}
+
+.grey {
+    width: 200px;
+    color: darkgray;
+    font-size: 16px;
+    white-space: normal;
 }
 
 
