--- a/src/Tracking/TrackingHome/Tracking.css
+++ b/src/Tracking/TrackingHome/Tracking.css
@@ -22,6 +22,12 @@
     transform: translate(-50%, -50%);
 }
 
+.tracking-loader {
+    top: 60%;
+    position: absolute;
+    left: 50%;
+}
+
 .delete-project {
     padding-right: 10px;
     margin: 0px;
