--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,6 +2,10 @@ center {
     text-align: center;
 }
 
+.boxed-container[data-v-ba9fe1bc]{
+    max-width:unset;
+}
+
 .help-modal-spiral-img {
     height: 200px;
     float: right;
